--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-app
+  name: simple-node
   labels:
-    app: my-app
+    app: simple-node
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: my-app
+      app: simple-node
   template:
     metadata:
       labels:
-        app: my-app
+        app: simple-node
     spec:
       containers:
       - name: simple-node
         image: tusharkathuria/simple-node
         ports:
-        - containerPort: 80
+        - containerPort: 8080
