--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app
+  name: simple-node
   labels:
-    run: my-app
+    run: simple-node
 spec:
   ports:
-  - port: 80
+  - port: 8080
     protocol: TCP
+    targetPort: 8080
   selector:
-    run: my-app
+    run: simple-node
+  type: ClusterIP
